--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "querystring": "^0.2.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
